# charm-kube-virt

./: .wokeignore  CONTRIBUTING.md  LICENSE  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/data/: proxy_config.yaml
.github/workflows/: ci.yaml
src/: charm.py  config.py  kubevirt_manifests.py  kubevirt_peer.py
tests/data/: charm.yaml  storage-pvc.yaml  vmi-ubuntu.yaml
tests/integration/: conftest.py  test_charm.py
tests/unit/: conftest.py  test_charm.py
upstream/: update.py
upstream/operator/manifests/v0.49.1/: kubevirt-operator.yaml
upstream/operator/manifests/v0.51.0/: 000-kubevirt-operator.yaml
upstream/operator/manifests/v0.52.0/: 000-kubevirt-operator.yaml
upstream/operator/manifests/v0.53.1/: 000-kubevirt-operator.yaml
upstream/operator/manifests/v0.53.2/: kubevirt-operator.yaml
upstream/operator/manifests/v0.54.0/: kubevirt-operator.yaml
upstream/operator/manifests/v0.55.0/: 000-kubevirt-operator.yaml
upstream/operator/manifests/v0.55.1/: 000-kubevirt-operator.yaml
upstream/operator/manifests/v0.55.2/: kubevirt-operator.yaml
upstream/operator/manifests/v0.56.1/: kubevirt-operator.yaml
upstream/operator/manifests/v0.57.1/: 000-kubevirt-operator.yaml
